The remaining HTML pages of the main application have been added
Signed-off-by: Hvesko_Gennady_253502 <pprom5573@gmail.com>

--- a/bc_proj/main/templates/main/news.html
+++ b/bc_proj/main/templates/main/news.html
@@ -4,6 +4,7 @@
 
 {% block content %}
     <div class="article-list">
+        <h3>Новости Галатеи</h3>
         {% for article in articles %}
             <div class="article">
                 <h2>{{ article.title }}</h2>
