Fixed the models and made the molds
Signed-off-by: Hvesko_Gennady_253502 <pprom5573@gmail.com>

--- a/bc_proj/main/templates/main/layout.html
+++ b/bc_proj/main/templates/main/layout.html
@@ -33,8 +33,8 @@
                     <a href="{% url 'logout' %}?next={% url 'home' %}"><li>Выйти</li></a>
                 {% endif %}
             {% else %}
-                <a href="{% url 'login_view' %}"><li>Войти</li></a>
-                <a href="{% url 'about' %}"><li>Зарегистрироваться</li></a>
+                <a href="{% url 'login' %}"><li>Войти</li></a>
+                <a href="{% url 'registration' %}"><li>Зарегистрироваться</li></a>
             {% endif %}
         </ul>
     </aside>
