Added registration, but haven't fully tested it yet
Signed-off-by: Hvesko_Gennady_253502 <pprom5573@gmail.com>

--- a/bc_proj/clinic/templates/clinic/registration.html
+++ b/bc_proj/clinic/templates/clinic/registration.html
@@ -13,6 +13,7 @@
         {{ form.name }}
         {{ form.patronymic }}
         {{ form.birth_date }}
+        {{ form.address }}
         {{ form.phone }}
         <button type="submit">Зарегистрироваться</button>
         <span>{{ error }}</span>
