--- a/bc_proj/main/templates/main/layout.html
+++ b/bc_proj/main/templates/main/layout.html
@@ -18,7 +18,7 @@
         </ul>
         <ul>
             <!-- Second Block: Public Pages with User Data -->
-            <a href="{% url 'home' %}"><li>Главная</li></a>
+            <a href="{% url 'contacts' %}"><li>Контакты</li></a>
             <a href="{% url 'news' %}"><li>Новости</li></a>
             <a href="{% url 'faq' %}"><li>FAQ</li></a>
             <a href="{% url 'about' %}"><li>О нас</li></a>
