--- a/bc_proj/main/templates/main/layout.html
+++ b/bc_proj/main/templates/main/layout.html
@@ -19,7 +19,7 @@
         <ul>
             <!-- Second Block: Public Pages with User Data -->
             <a href="{% url 'contacts' %}"><li>Контакты</li></a>
-            <a href="{% url 'news' %}"><li>Новости</li></a>
+            <a href="{% url 'vacancies' %}"><li>Вакансии</li></a>
             <a href="{% url 'faq' %}"><li>FAQ</li></a>
             <a href="{% url 'about' %}"><li>О нас</li></a>
         </ul>
