Added the reviews
Signed-off-by: Hvesko_Gennady_253502 <pprom5573@gmail.com>

--- a/bc_proj/main/templates/main/layout.html
+++ b/bc_proj/main/templates/main/layout.html
@@ -20,7 +20,7 @@
             <!-- Second Block: Public Pages with User Data -->
             <a href="{% url 'contacts' %}"><li>Контакты</li></a>
             <a href="{% url 'vacancies' %}"><li>Вакансии</li></a>
-            <a href="{% url 'faq' %}"><li>FAQ</li></a>
+            <a href="{% url 'reviews' %}"><li>Отзывы</li></a>
             <a href="{% url 'about' %}"><li>О нас</li></a>
         </ul>
         <ul>
