--- a/bc_proj/main/templates/main/layout.html
+++ b/bc_proj/main/templates/main/layout.html
@@ -25,9 +25,9 @@
         <ul>
             <!-- New Block: Services, Promocodes, Schedule -->
             <a href="{% url 'services' %}"><li>Услуги</li></a>
-            <a href="{% url 'news' %}"><li>Промокоды</li></a>
+            <a href="{% url 'promocodes' %}"><li>Промокоды</li></a>
             {% if user.is_authenticated and not user.is_superuser %}
-                <a href="{% url 'faq' %}"><li>График</li></a>
+                <a href="{% url 'schedule' %}"><li>График</li></a>
             {% endif %}
         </ul>
         <ul>
