--- a/bc_proj/main/templates/main/index.html
+++ b/bc_proj/main/templates/main/index.html
@@ -9,4 +9,8 @@
         <p>{{ latest_article.summary }}</p>
         <img src="{{ latest_article.image.url }}" alt="{{ latest_article.title }}">
     </article>
+    <div>
+        <p>Текущая дата: {{ current_date|date:"d/m/Y" }}</p>
+        <p>Часовой пояс пользователя: {{ user_timezone }}</p>
+    </div>
 {% endblock %}
