--- a/bc_proj/clinic/templates/clinic/promocodes.html
+++ b/bc_proj/clinic/templates/clinic/promocodes.html
@@ -5,11 +5,19 @@
 {% block content %}
     <h1>Промокоды</h1>
 
+    {% if user.is_superuser %}
+        <button onclick="location.href='{% url 'add_promocode' %}'">Добавить промокод</button>
+    {% endif %}
+
     {% for promocode in promocodes %}
         <div class="promocode">
             <h3>{{ promocode.code }}</h3>
             <p>Скидка: {{ promocode.discount }}%</p>
             <p>Действителен до: {{ promocode.expiration_date }}</p>
+            {% if user.is_superuser %}
+                <button onclick="location.href='{% url 'update_promocode' promocode.id %}'">Изменить промокод</button>
+                <button onclick="location.href='{% url 'delete_promocode' promocode.id %}'">Удалить промокод</button>
+            {% endif %}
         </div>
     {% endfor %}
 {% endblock %}
