--- a/bc_proj/main/templates/main/layout.html
+++ b/bc_proj/main/templates/main/layout.html
@@ -9,6 +9,16 @@
 </head>
 
 <body>
+    <header>
+        <div class="header-content">
+            <div class="logo">
+                <img src="main/partner_logos/flower-girl_cB2BkZh.png" alt="Логотип компании">
+            </div>
+            <div class="org-name">
+                <h1>Галатея</h1>
+            </div>
+        </div>
+    </header>
     <aside>
         <nav>
             <ul>
