--- a/bc_proj/main/templates/main/layout.html
+++ b/bc_proj/main/templates/main/layout.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html lang="en">
 
+{% load static %}
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,10 +14,11 @@
     <header>
         <div class="header-content">
             <div class="logo">
-                <img src="main/partner_logos/flower-girl_cB2BkZh.png" alt="Логотип компании">
+                <img src="{% static 'main/logo_small.png' %}" alt="Логотип компании">
             </div>
-            <div class="org-name">
+            <div class="org-info">
                 <h1>Галатея</h1>
+                <p class="slogan">Красота исходит изнутри</p>
             </div>
         </div>
     </header>
