--- a/bc_proj/main/templates/main/index.html
+++ b/bc_proj/main/templates/main/index.html
@@ -31,17 +31,11 @@
     </section>
     <section class="banner">
         <div class="banner-container">
-            <img src="{% static 'main/logo_small.png' %}" alt="Реклама компании" class="banner-img">
-            <img src="{% static 'main/logo_small.png' %}" alt="Реклама компании" class="banner-img">
-            <img src="{% static 'main/logo_small.png' %}" alt="Реклама компании" class="banner-img">
+            <img src="{% static 'main/banner_1.gif' %}" alt="Реклама компании" class="banner-img">
+            <img src="{% static 'main/banner_2.gif' %}" alt="Реклама компании" class="banner-img">
+            <img src="{% static 'main/banner_3.gif' %}" alt="Реклама компании" class="banner-img">
         </div>
     </section>
-    <article>
-        <h2>Актуальная статья</h2>
-        <h2>{{ latest_article.title }}</h2>
-        <p>{{ latest_article.summary }}</p>
-        <img src="{{ latest_article.image.url }}" alt="{{ latest_article.title }}">
-    </article>
     <section class="service-catalog">
         <h2>Каталог услуг</h2>
         <div class="service-catalog-container">
@@ -62,6 +56,12 @@
         </div>
         <button class="toggle-button">Развернуть / Свернуть</button>
     </section>
+    <article>
+        <h2>Актуальная статья</h2>
+        <h2>{{ latest_article.title }}</h2>
+        <p>{{ latest_article.summary }}</p>
+        <img src="{{ latest_article.image.url }}" alt="{{ latest_article.title }}">
+    </article>
     <section class="partners">
         <h2>Наши партнеры</h2>
         <ul class="partners-list">
