--- a/bc_proj/clinic/templates/clinic/basket.html
+++ b/bc_proj/clinic/templates/clinic/basket.html
@@ -12,8 +12,9 @@
             {% for service in services %}
                 <li>
                     {{ service.title }} - {{ service.price }} 
-                    <form action="{% url 'service_detail' service.id %}" method="POST">
+                    <form action="{% url 'basket' %}" method="POST">
                         {% csrf_token %}
+                        <input type="hidden" name="to_delete" value="{{ service.id }}">
                         <button type="submit">-</button>
                     </form>
                 </li>
@@ -25,8 +26,9 @@
             <input type="hidden" name="category_name_from_basket" value="{{ services.0.service_specialization.service_category.name }}">
             <button type="submit">Оформить заказ</button>
         </form>
-        <form action="{% url 'ordering' %}" method="POST">
+        <form action="{% url 'basket' %}" method="POST">
             {% csrf_token %}
+            <input type="hidden" name="to_delete" value="{{ category_total_pair.0 }}">
             <button type="submit">Удалить</button>
         </form>
     {% endfor %}
