p tag in ordering

--- a/bc_proj/clinic/templates/clinic/ordering.html
+++ b/bc_proj/clinic/templates/clinic/ordering.html
@@ -27,6 +27,10 @@
         <label for="promo_code">Промокод:</label>
         <input type="text" name="promo_code" id="promo_code">
     </div>
+    <p>
+        Обратите внимание, что оплата заказа осуществляется непосредственно лечащему врачу
+        при получении услуги.
+    </p>
     <button type="submit">Готово</button>
 </form>
 {% endblock %}
