--- a/bc_proj/clinic/templates/clinic/ordering.html
+++ b/bc_proj/clinic/templates/clinic/ordering.html
@@ -3,34 +3,41 @@
 {% block title %}Оформление заказа{% endblock %}
 
 {% block content %}
-<h1>Оформление заказа</h1>
-<form method="post">
-    {% csrf_token %}
-    <div>
-        <h2>Выбранные услуги:</h2>
-        <ul>
-            {% for service in services %}
-                <li>{{ service.title }} - {{ service.price }} руб.</li>
-            {% endfor %}
-        </ul>
-        <p>Итоговая цена: {{ total_price }} руб.</p>
-    </div>
-    <div>
-        <label for="doctor">Выберите врача:</label>
-        <select name="doctor" id="doctor">
-            {% for doctor in doctors %}
-                <option value="{{ doctor.id }}">{{ doctor.surname }} {{ doctor.name }}</option>
-            {% endfor %}
-        </select>
-    </div>
-    <div>
-        <label for="promo_code">Промокод:</label>
-        <input type="text" name="promo_code" id="promo_code">
-    </div>
-    <p>
-        Обратите внимание, что оплата заказа осуществляется непосредственно лечащему врачу
-        при получении услуги.
-    </p>
-    <button type="submit">Готово</button>
-</form>
+<main itemscope itemtype="http://schema.org/Order">
+    <h1 itemprop="name">Оформление заказа</h1>
+
+    <form method="post" itemscope itemtype="http://schema.org/PlaceOrder">
+        {% csrf_token %}
+        <div>
+            <h2>Выбранные услуги:</h2>
+            <ul itemscope itemtype="http://schema.org/Basket">
+                {% for service in services %}
+                    <li itemprop="itemListElement" itemscope itemtype="http://schema.org/Product">
+                        <span itemprop="name">{{ service.title }}</span> -
+                        <span itemprop="price">{{ service.price }} руб.</span>
+                    </li>
+                {% endfor %}
+            </ul>
+            <p itemprop="orderTotal">Итоговая цена: <span>{{ total_price }}</span> руб.</p>
+        </div>
+        <div>
+            <label for="doctor" itemprop="doctor">Выберите врача:</label>
+            <select name="doctor" id="doctor" required>
+                {% for doctor in doctors %}
+                    <option value="{{ doctor.id }}">{{ doctor.surname }} {{ doctor.name }}</option>
+                {% endfor %}
+            </select>
+        </div>
+        <div>
+            <label for="promo_code">Промокод:</label>
+            <input type="text" name="promo_code" id="promo_code" aria-describedby="promo_help" placeholder="Введите промокод">
+            <small id="promo_help">Если вы знаете действующий промокод, введите его здесь.</small>
+        </div>
+        <p itemprop="paymentInstructions">
+            Обратите внимание, что оплата заказа осуществляется непосредственно лечащему врачу
+            при получении услуги.
+        </p>
+        <button type="submit">Готово</button>
+    </form>
+</main>
 {% endblock %}
