--- a/bc_proj/clinic/templates/clinic/ordering.html
+++ b/bc_proj/clinic/templates/clinic/ordering.html
@@ -2,6 +2,11 @@
 
 {% block title %}Оформление заказа{% endblock %}
 
+{% block meta %}
+    <meta name="description" content="Оформите заказ на медицинские услуги. Выберите врача и укажите свои данные.">
+    <meta name="keywords" content="оформление заказа, медицинские услуги, выбрать врача, промокод">
+{% endblock %}
+
 {% block content %}
 <main itemscope itemtype="http://schema.org/Order">
     <h1 itemprop="name">Оформление заказа</h1>
