--- a/bc_proj/main/templates/main/index.html
+++ b/bc_proj/main/templates/main/index.html
@@ -36,15 +36,17 @@
     </section>
     <section class="banner">
         <div class="banner-container">
-            <img src="{% static 'main/banner_1.gif' %}" alt="Реклама компании" class="banner-img">
-            <img src="{% static 'main/banner_2.gif' %}" alt="Реклама компании" class="banner-img">
-            <img src="{% static 'main/banner_3.gif' %}" alt="Реклама компании" class="banner-img">
+            <img src="{% static 'main/banner_1.gif' %}" alt="Реклама компании" class="banner-img" width="600">
+            <img src="{% static 'main/banner_2.gif' %}" alt="Реклама компании" class="banner-img" width="600">
+            <img src="{% static 'main/banner_3.gif' %}" alt="Реклама компании" class="banner-img" width="600">
         </div>
     </section>
     <section class="service-catalog">
         <h2>Каталог услуг</h2>
         <div class="service-catalog-container">
-            {% for category, services in grouped_services.items %}
+            <details>
+                <summary>Каталог услуг</summary>
+                {% for category, services in grouped_services.items %}
                 <div class="category-block">
                     <h3>Категория: {{ category.name }}</h3>
                     <div class="services-list">
@@ -58,13 +60,13 @@
                     </div>
                 </div>
             {% endfor %}
+            </details>
         </div>
-        <button class="toggle-button">Развернуть / Свернуть</button>
     </section>
     <article>
         <h2>Актуальная статья: {{ latest_article.title }}</h2>
         <p>{{ latest_article.summary }}</p>
-        <img src="{{ latest_article.image.url }}" alt="{{ latest_article.title }}">
+        <img src="{{ latest_article.image.url }}" alt="{{ latest_article.title }}" width="600">
     </article>
     <section class="partners">
         <h2>Наши партнеры</h2>
@@ -72,7 +74,7 @@
             {% for partner in partners %}
                 <li class="partner-item">
                     <a href="{{ partner.website }}" target="_blank" class="partner-link">
-                        <img src="{{ partner.logo.url }}" alt="{{ partner.name }} logo" class="partner-logo">
+                        <img src="{{ partner.logo.url }}" alt="{{ partner.name }} logo" class="partner-logo" width="600">
                         <span class="partner-name">{{ partner.name }}</span>
                     </a>
                 </li>
