--- a/bc_proj/main/templates/main/news.html
+++ b/bc_proj/main/templates/main/news.html
@@ -2,14 +2,32 @@
 
 {% block title %}Новости{% endblock %}
 
+{% block meta %}
+    <meta name="description" content="Новости Галатеи о косметологии, сплетни и слухи со всего мира. Будьте в курсе последних событий.">
+    <meta name="keywords" content="косметология, новости, слухи, сплетни">
+{% endblock %}
+
 {% block content %}
     <div class="article-list">
         <h3>Новости Галатеи</h3>
+        <blockquote>
+            <p>Слухи о красоте — как лёгкий ветер,<br>
+            Новости летят, как звезды по небу.<br>
+            Что слышишь ты? Что будет там дальше?<br>
+            Сплетни кружат в непрерывном танце.</p>
+            <footer>
+                <cite>Автор: Аркадий Смычков</cite>
+            </footer>
+        </blockquote>
         {% for article in articles %}
             <div class="article">
                 <h2>{{ article.title }}</h2>
                 <p>{{ article.summary }}</p>
                 <img src="{{ article.image.url }}" alt="{{ article.title }}" width="600">
+                <details>
+                    <summary>Читать статью полностью</summary>
+                    <p>{{ article.content }}</p>
+                </details>
             </div>
         {% endfor %}
     </div>
