some new too too

--- a/bc_proj/main/templates/main/faq.html
+++ b/bc_proj/main/templates/main/faq.html
@@ -19,4 +19,26 @@
             {% endfor %}
         </ul>
     </section>
+    <section>
+        <h3>Дополнительные знания</h3>
+        <dl>
+          <dt>Косметология</dt>
+          <dd>Наука и практическое направление, занимающееся изучением и применением средств и методов для улучшения внешнего вида кожи, волос и ногтей.</dd>
+
+          <dt>Эссенция</dt>
+          <dd>Концентрированное косметическое средство, которое обеспечивает глубокое увлажнение и восстановление кожи.</dd>
+
+          <dt>Пилинг</dt>
+          <dd>Процедура очищения и отшелушивания верхнего слоя кожи для улучшения её текстуры и цвета.</dd>
+
+          <dt>Маска</dt>
+          <dd>Косметическое средство, которое наносится на кожу для решения различных проблем, таких как увлажнение, питание или очищение.</dd>
+
+          <dt>Эстетическая процедура</dt>
+          <dd>Медицинская процедура, направленная на улучшение эстетики внешности, включая инъекции, лазерную терапию и хирургические вмешательства.</dd>
+
+          <dt>Косметическая аллергия</dt>
+          <dd>Негативная реакция кожи на компоненты косметических средств, проявляющаяся в виде покраснения, зуда или высыпаний.</dd>
+        </dl>
+    </section>
 {% endblock %}
