--- a/bc_proj/main/templates/main/index.html
+++ b/bc_proj/main/templates/main/index.html
@@ -36,6 +36,9 @@
     </section>
     <section class="banner">
         <div class="banner-container">
+
+            <!--img[src="{% static 'main/banner_1.gif' %}"][alt="Реклама компании"][class="banner-img"][width="600"] + img[src="{% static 'main/banner_2.gif' %}"][alt="Реклама компании"][class="banner-img"][width="600"] + img[src="{% static 'main/banner_3.gif' %}"][alt="Реклама компании"][class="banner-img"][width="600"]-->
+
             <img src="{% static 'main/banner_1.gif' %}" alt="Реклама компании" class="banner-img" width="600">
             <img src="{% static 'main/banner_2.gif' %}" alt="Реклама компании" class="banner-img" width="600">
             <img src="{% static 'main/banner_3.gif' %}" alt="Реклама компании" class="banner-img" width="600">
