--- a/bc_proj/main/templates/main/layout.html
+++ b/bc_proj/main/templates/main/layout.html
@@ -35,6 +35,7 @@
                 <li><a href="{% url 'news' %}">Новости</a></li>
                 <li><a href="{% url 'faq' %}">FAQ</a></li>
                 <li><a href="{% url 'about' %}">О нас</a></li>
+                <li><a href="{% url 'policy' %}">Политика конфиденциальности</a></li>
             </ul>
             <ul>
                 <!-- Second Block: Public Pages with User Data -->
