--- a/bc_proj/main/templates/main/layout.html
+++ b/bc_proj/main/templates/main/layout.html
@@ -13,6 +13,11 @@
         <meta name="keywords" content="косметология, уход за кожей, красота">
     {% endblock %}
     <title>{% block title %}{% endblock %}</title>
+    <style>
+        .horizontal li {
+            display: inline;
+        }
+    </style>
 </head>
 
 <body>
@@ -25,6 +30,14 @@
                 <h1><strong>Галатея</strong></h1>
                 <p class="slogan"><strong>Красота исходит изнутри</strong></p>
             </div>
+            <nav>
+                <ul class="horizontal">
+                    <!-- Second Block: Public Pages with User Data -->
+                    <li><a href="{% url 'contacts' %}">Контакты</a></li>
+                    <li><a href="{% url 'vacancies' %}">Вакансии</a></li>
+                    <li><a href="{% url 'reviews' %}">Отзывы</a></li>
+                </ul>
+            </nav>
         </div>
     </header>
     <aside>
@@ -36,12 +49,6 @@
                 <li><a href="{% url 'faq' %}">FAQ</a></li>
                 <li><a href="{% url 'about' %}">О нас</a></li>
                 <li><a href="{% url 'policy' %}">Политика конфиденциальности</a></li>
-            </ul>
-            <ul>
-                <!-- Second Block: Public Pages with User Data -->
-                <li><a href="{% url 'contacts' %}">Контакты</a></li>
-                <li><a href="{% url 'vacancies' %}">Вакансии</a></li>
-                <li><a href="{% url 'reviews' %}">Отзывы</a></li>
             </ul>
             <ul>
                 <!-- New Block: Services, Promocodes, Schedule, Statistics -->
